syntax = "proto3";

package alpha.transport.rpc;

import "google/protobuf/struct.proto";

option java_multiple_files = true;
option java_package = "com.alpha.transport.rpc";
option go_package = "alpha/transport/rpc;rpc";

// أوامر التنفيذ (Orders, Cancellations)
service ExecutionLink {
  rpc SubmitOrder(SubmitOrderRequest) returns (SubmitOrderResponse);
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
  rpc AmendOrder(AmendOrderRequest) returns (AmendOrderResponse);
  rpc GetOrderStatus(GetOrderStatusRequest) returns (GetOrderStatusResponse);
}

enum OrderType {
  ORDER_TYPE_UNSPECIFIED = 0;
  ORDER_TYPE_MARKET = 1;
  ORDER_TYPE_LIMIT = 2;
  ORDER_TYPE_STOP = 3;
  ORDER_TYPE_STOP_LIMIT = 4;
}

enum TimeInForce {
  TIME_IN_FORCE_UNSPECIFIED = 0;
  TIME_IN_FORCE_DAY = 1;
  TIME_IN_FORCE_GTC = 2;
  TIME_IN_FORCE_IOC = 3;
  TIME_IN_FORCE_FOK = 4;
}

enum ExecStatus {
  EXEC_STATUS_UNSPECIFIED = 0;
  EXEC_STATUS_NEW = 1;
  EXEC_STATUS_WORKING = 2;
  EXEC_STATUS_PARTIALLY_FILLED = 3;
  EXEC_STATUS_FILLED = 4;
  EXEC_STATUS_CANCELED = 5;
  EXEC_STATUS_REJECTED = 6;
  EXEC_STATUS_EXPIRED = 7;
}

message SubmitOrderRequest {
  string request_id = 1;
  string trace_id = 2;
  string account_id = 3;
  string portfolio_id = 4;
  string strategy_id = 5;
  string client_order_id = 6;
  string symbol = 7;
  string venue = 8;
  string side = 9;
  OrderType order_type = 10;
  TimeInForce tif = 11;
  double quantity = 12;
  double limit_price = 13;
  double stop_price = 14;
  double max_slippage_bps = 15;
  string currency = 16;
  google.protobuf.Struct tags = 17;
}

message SubmitOrderResponse {
  bool accepted = 1;
  string venue_order_id = 2;
  ExecStatus status = 3;
  string rejection_code = 4;
  string reason = 5;
}

message CancelOrderRequest {
  string request_id = 1;
  string trace_id = 2;
  string account_id = 3;
  string venue_order_id = 4;
  string client_order_id = 5;
  string reason = 6;
}

message CancelOrderResponse {
  bool cancelled = 1;
  ExecStatus status = 2;
  string reason = 3;
}

message AmendOrderRequest {
  string request_id = 1;
  string trace_id = 2;
  string account_id = 3;
  string venue_order_id = 4;
  double new_quantity = 5;
  double new_limit_price = 6;
  double new_stop_price = 7;
  string reason = 8;
}

message AmendOrderResponse {
  bool amended = 1;
  ExecStatus status = 2;
  string reason = 3;
}

message GetOrderStatusRequest {
  string request_id = 1;
  string trace_id = 2;
  string account_id = 3;
  oneof locator {
    string venue_order_id = 4;
    string client_order_id = 5;
  }
}

message Fill {
  string fill_id = 1;
  double quantity = 2;
  double price = 3;
  double fee = 4;
  int64 fill_time_ms = 5;
}

message GetOrderStatusResponse {
  string venue_order_id = 1;
  string client_order_id = 2;
  ExecStatus status = 3;
  double filled_quantity = 4;
  double remaining_quantity = 5;
  double average_fill_price = 6;
  repeated Fill fills = 7;
  int64 last_update_time_ms = 8;
}
